Improvements from findbugs.